# pickupscan

./: .gitignore  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: admin_auth.py  admin_views.py  public.py
app/core/: config.py  deps.py  security.py
app/db/: models.py
app/static/: admin-scans.js  qr-scanner.js  style.css
app/templates/: admin_login.html  admin_pharmacies.html  admin_regions.html  admin_scans.html  base.html  scan.html
